Add jellyseer.lan typo alias, remove cloudflared-watchdog

--- a/pihole/02-local-dns.conf.example
+++ b/pihole/02-local-dns.conf.example
@@ -11,6 +11,7 @@
 # Media services
 address=/jellyfin.lan/TRAEFIK_LAN_IP
 address=/jellyseerr.lan/TRAEFIK_LAN_IP
+address=/jellyseer.lan/TRAEFIK_LAN_IP
 
 # *arr stack (VPN-protected)
 address=/sonarr.lan/TRAEFIK_LAN_IP
